--- a/index.html
+++ b/index.html
@@ -14,12 +14,27 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <section id="menu">
+      <div class="menu">
+        <img src="img/logo.png" alt="logo" class="menu--logo" />
+        <div class="menu--links">
+          <div class="menu--links__link">Home</div>
+          <div class="menu--links__link">About</div>
+          <div class="menu--links__link">Services</div>
+          <div class="menu--links__link">Portofolio</div>
+          <div class="menu--links__link">Contact</div>
+          <div class="menu--links__btn">Book now</div>
+        </div>
+      </div>
+    </section>
     <section class="header">
       <div class="leftSideUp"></div>
       <div class="leftSideDown">
-        <img src="img/fb-icon.png" alt="fb icon" class="icon" />
-        <img src="img/insta-icon.png" alt="insta icon" class="icon" />
-        <img src="img/tw-icon.png" alt="tw icon" class="icon" />
+        <div class="social">
+          <img src="img/fb-icon.png" alt="fb icon" class="icon" />
+          <img src="img/insta-icon.png" alt="insta icon" class="icon" />
+          <img src="img/tw-icon.png" alt="tw icon" class="icon" />
+        </div>
       </div>
       <div class="rightSide">
         <div class="h1">
@@ -28,6 +43,12 @@
             <p>the best place for your perfect nails</p>
           </div>
           <h1>Beauty Salon</h1>
+          <div class="btnbook">
+            <div class="btn">
+              <img src="img/arrow-btn.png" alt="arrow icon" />
+              <span>Book now</span>
+            </div>
+          </div>
         </div>
         <div class="orar">
           <div class="orar__btn">
@@ -56,17 +77,6 @@
             <span>01</span>
             <img src="/img/next__arrow.png" alt="next icon arrow" />
           </div>
-        </div>
-      </div>
-      <div class="header__menu">
-        <img src="img/logo.png" alt="logo" class="header__menu--logo" />
-        <div class="header__menu--links">
-          <div class="header__menu--links__link">Home</div>
-          <div class="header__menu--links__link">About</div>
-          <div class="header__menu--links__link">Services</div>
-          <div class="header__menu--links__link">Portofolio</div>
-          <div class="header__menu--links__link">Contact</div>
-          <div class="header__menu--links__btn">Book now</div>
         </div>
       </div>
     </section>
