--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Beauty Salon</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+  <body id="body">
     <section id="menu">
       <div class="menu">
         <img src="img/logo.png" alt="logo" class="menu--logo" />
@@ -78,6 +78,30 @@
             <img src="/img/prev_arrow.png" alt="prev icon arrow" />
             <span>01</span>
             <img src="/img/next__arrow.png" alt="next icon arrow" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="about">
+      <div class="title">
+        <img src="img/ico.png" alt="mini-ico" />
+        <h2>Welcome</h2>
+      </div>
+
+      <div class="about">
+        <div class="about__leftSide">
+          <div class="about__leftSide--cards">
+            <div class="about__leftSide--cards__expCard"></div>
+            <div class="about__leftSide--cards__cardCount"></div>
+            <div class="about__leftSide--cards__cardCount"></div>
+          </div>
+        </div>
+        <div class="about__rightSide">
+          <div class="about__rightSide--cards">
+            <div class="about__rightSide--cards__card"></div>
+            <div class="about__rightSide--cards__card"></div>
+            <div class="about__rightSide--cards__card"></div>
           </div>
         </div>
       </div>
