--- a/index.html
+++ b/index.html
@@ -92,16 +92,70 @@
       <div class="about">
         <div class="about__leftSide">
           <div class="about__leftSide--cards">
-            <div class="about__leftSide--cards__expCard"></div>
-            <div class="about__leftSide--cards__cardCount"></div>
-            <div class="about__leftSide--cards__cardCount"></div>
+            <div class="about__leftSide--cards__expCard">
+              <div class="years">
+                <img src="img/x-exp.png" alt="experience img" />
+                <h2>10</h2>
+                <h3>years</h3>
+              </div>
+              <div class="para">
+                <div class="para--title">Our words talk about experience</div>
+                <div class="para--text">
+                  Aliquam ultrices sagittis orci a scelerisque purus semper.
+                  Quam viverra orci sagittis eu volutpat.
+                </div>
+              </div>
+            </div>
+            <div class="about__leftSide--cards__cardCount">
+              <div class="cardCount__icon">
+                <div class="cardCount__icon--bubble">
+                  <img src="img/face-happy-icon.png" alt="happy face icon" />
+                </div>
+              </div>
+              <div class="cardCount__text">
+                <h3>Happy Customers</h3>
+                <p>900+</p>
+              </div>
+            </div>
+            <div class="about__leftSide--cards__cardCount">
+              <div class="cardCount__icon">
+                <div class="cardCount__icon--bubble">
+                  <img src="img/like-icon.png" alt="like icon" />
+                </div>
+              </div>
+              <div class="cardCount__text">
+                <h3>Positive Feedbacks</h3>
+                <p>850+</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="about__rightSide">
           <div class="about__rightSide--cards">
-            <div class="about__rightSide--cards__card"></div>
-            <div class="about__rightSide--cards__card"></div>
-            <div class="about__rightSide--cards__card"></div>
+            <div class="about__rightSide--cards__card">
+              <img src="img/heart-icon.png" alt="heart icon" />
+              <h2>Pure Passion</h2>
+              <p>
+                Aliquam ultrices sagittis orci a scelerisque purus semper. Quam
+                viverra orci sagittis eu volutpat
+              </p>
+            </div>
+            <div class="about__rightSide--cards__card">
+              <img src="img/diamond-icon.png" alt="diamond icon" />
+              <h2>Creative Style</h2>
+              <p>
+                Aliquam ultrices sagittis orci a scelerisque purus semper. Quam
+                viverra orci sagittis eu volutpat
+              </p>
+            </div>
+            <div class="about__rightSide--cards__card">
+              <img src="img/clock-icon.png" alt="clock icon" />
+              <h2>Fast and cheap</h2>
+              <p>
+                Aliquam ultrices sagittis orci a scelerisque purus semper. Quam
+                viverra orci sagittis eu volutpat
+              </p>
+            </div>
           </div>
         </div>
       </div>
