--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
           <div class="menu--links__link">Contact</div>
           <div class="menu--links__btn">Book now</div>
         </div>
+        <div class="menu--hamburger">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="menu--hamblinks">
+          <div class="menu--hamblinks__link">Home</div>
+          <div class="menu--hamblinks__link">About</div>
+          <div class="menu--hamblinks__link">Services</div>
+          <div class="menu--hamblinks__link">Portofolio</div>
+          <div class="menu--hamblinks__link">Contact</div>
+          <div class="menu--hamblinks__btn">Book now</div>
+        </div>
       </div>
     </section>
     <section class="header">
@@ -160,5 +176,7 @@
         </div>
       </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="/hamburger-menu.js"></script>
   </body>
 </html>
